Error Mitigation/MagiCoder/Data/javax_xml_ws_soap/javax_xml_ws_soapOutputResult.txt
Sample: AddressingFeature_4
----------------------------------------------------------------
output:
./Data/javax_xml_ws_soap/javaFiles/AddressingFeature_4.java:1: error: package javax.xml.ws.soap does not exist
import javax.xml.ws.soap.AddressingFeature;
                        ^
./Data/javax_xml_ws_soap/javaFiles/AddressingFeature_4.java:5: error: cannot find symbol
        AddressingFeature addressingFeature = new AddressingFeature();
        ^
  symbol:   class AddressingFeature
  location: class AddressingFeature_4
./Data/javax_xml_ws_soap/javaFiles/AddressingFeature_4.java:5: error: cannot find symbol
        AddressingFeature addressingFeature = new AddressingFeature();
                                                  ^
  symbol:   class AddressingFeature
  location: class AddressingFeature_4
3 errors


================================================================

